add:image+name.json

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personajes - Proyecto Harry Potter</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/character.css" />
   </head>
   <body>
     <header>
@@ -14,6 +14,19 @@
           <li><a href="personajes.html">Personajes</a></li>
         </ul>
       </nav>
+<main>
+<!-- <div class="character">
+
+<img src="" alt="">    
+<h2 id="name"></h2>
+<h3 id="species"></h3>
+<h3 id="gender"></h3>
+
+</div> -->
+
+
+</main>
+
     </header>
 
     <main>
