add:style.chatacters

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Personajes - Proyecto Harry Potter</title>
-    <link rel="stylesheet" href="../css/character.css" />
-  </head>
+    <!-- <link rel="stylesheet" href="../css/character.css" /> -->
+<link rel="stylesheet" href="../css/style.css">  
+</head>
   <body>
     <header>
       <nav>
@@ -14,27 +15,15 @@
           <li><a href="personajes.html">Personajes</a></li>
         </ul>
       </nav>
-<main>
-<!-- <div class="character">
-
-<img src="" alt="">    
-<h2 id="name"></h2>
-<h3 id="species"></h3>
-<h3 id="gender"></h3>
-
-</div> -->
-
-
-</main>
 
     </header>
 
     <main>
       <section class="characters">
-        <h1>Personajes</h1>
-        <div class="grid">
+        <!-- <h1>Personajes</h1> -->
+        <!-- <div class="grid">
           <!-- Aquí se insertarán las tarjetas de los personajes dinámicamente -->
-        </div>
+        <!-- </div> -->
       </section>
     </main>
 
