add:filtered-list

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,6 +19,11 @@
     </header>
 
     <main>
+        <section class="buscador">
+            <input id="inpDePersonajes" type="text" placeholder="Buscar personaje...">
+            <button id="btnDePersonajes">buscador</button>
+            <!-- <p id="productoEncontrado"></p> -->
+        </section>
       <section class="characters">
         <!-- <h1>Personajes</h1> -->
         <!-- <div class="grid">
@@ -30,7 +35,7 @@
     <footer>
       <p>&copy; 2024 Proyecto Harry Potter. Todos los derechos reservados.</p>
     </footer>
-    <script src="../app/fetch.js"></script>
-  
+    <!-- <script src="../app/fetch.js"></script> -->
+  <script src="../app/fetch.js"></script>
 </body>
 </html>
