--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -19,10 +19,11 @@
     </header>
 
     <main>
+        
         <section class="buscador">
+            <h2>PERSONAJES</h2>
             <input id="inpDePersonajes" type="text" placeholder="Buscar personaje...">
-            <button id="btnDePersonajes">buscador</button>
-            <!-- <p id="productoEncontrado"></p> -->
+           
         </section>
       <section class="characters">
         <!-- <h1>Personajes</h1> -->
