--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
       <section class="intro">
         <h1>Bienvenidos al Mundo de Harry Potter</h1>
         <p>
-          En este sitio encontrarás información detallada sobre el universo de
-          Harry Potter, incluyendo personajes, casas, hechizos y mucho más.
+          ¡Bienvenido a nuestra página dedicada al maravilloso mundo de Harry Potter! Aquí encontrarás descripciones detalladas de los personajes más emblemáticos, desde el valiente Harry Potter hasta el astuto Draco Malfoy. Sumérgete en las historias de las cuatro casas de Hogwarts: Gryffindor, Hufflepuff, Ravenclaw y Slytherin, cada una con sus propios valores y tradiciones. Aprende sobre los hechizos más fascinantes, como el encantamiento protector "Expecto Patronum" y el hechizo desarmador "Expelliarmus". Nuestro sitio es un recurso completo para todos los fanáticos del universo mágico creado por J.K. Rowling, donde la magia cobra vida y la aventura nunca termina. ¡Explora y deja que tu imaginación vuele con nosotros!
         </p>
       </section>
     </main>
