--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -22,7 +22,7 @@
         
         <section class="buscador">
             <h2>PERSONAJES</h2>
-            <input id="inpDePersonajes" type="text" placeholder="Buscar personaje...">
+            <input id="inpDePersonajes" type="text" placeholder="Buscar personaje..." autocomplete="off">
            
         </section>
       <section class="characters">
