--- a/index.html
+++ b/index.html
@@ -1,34 +1,106 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inicio - Proyecto Harry Potter</title>
-    <link rel="stylesheet" href="./css/style.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="pages/personajes.html">Personajes</a></li>
-        </ul>
-      </nav>
-    </header>
 
-    <main>
-      <section class="intro">
-        <h1>Bienvenidos al Mundo de Harry Potter</h1>
-        <p>
-          ¡Bienvenido a nuestra página dedicada al maravilloso mundo de Harry Potter! Aquí encontrarás descripciones detalladas de los personajes más emblemáticos, desde el valiente Harry Potter hasta el astuto Draco Malfoy. Sumérgete en las historias de las cuatro casas de Hogwarts: Gryffindor, Hufflepuff, Ravenclaw y Slytherin, cada una con sus propios valores y tradiciones. Aprende sobre los hechizos más fascinantes, como el encantamiento protector "Expecto Patronum" y el hechizo desarmador "Expelliarmus". Nuestro sitio es un recurso completo para todos los fanáticos del universo mágico creado por J.K. Rowling, donde la magia cobra vida y la aventura nunca termina. ¡Explora y deja que tu imaginación vuele con nosotros!
-        </p>
-      </section>
-    </main>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Inicio - Proyecto Harry Potter</title>
+  <link rel="stylesheet" href="./css/style.css" />
+</head>
 
-    <footer>
-      <p>&copy; 2024 Proyecto Harry Potter. Todos los derechos reservados.</p>
-    </footer>
-    <!-- <script src="./app/fetch.js"></script> -->
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="pages/personajes.html">Personajes</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  </body>
+  <main>
+    <section class="intro">
+      <h1>Bienvenidos al Mundo de Harry Potter</h1>
+      <p>
+        ¡Bienvenido a nuestra página dedicada al maravilloso mundo de Harry Potter! Aquí encontrarás descripciones
+        detalladas de los personajes más emblemáticos, desde el valiente Harry Potter hasta el astuto Draco Malfoy.
+        Sumérgete en las historias de las cuatro casas de Hogwarts: Gryffindor, Hufflepuff, Ravenclaw y Slytherin, cada
+        una con sus propios valores y tradiciones. Aprende sobre los hechizos más fascinantes, como el encantamiento
+        protector "Expecto Patronum" y el hechizo desarmador "Expelliarmus". Nuestro sitio es un recurso completo para
+        todos los fanáticos del universo mágico creado por J.K. Rowling, donde la magia cobra vida y la aventura nunca
+        termina. ¡Explora y deja que tu imaginación vuele con nosotros!
+      </p>
+    </section>
+    
+    <section class="galery">
+      <h2 class="title-galery">Descubre el Mundo Mágico</h2>
+    
+      <div class="galery-card">
+
+        <!-- <div class="card"> -->
+          <div class="card-film">
+            <div>
+            <img src="./assets/image/train-8044059_1280.jpg" alt="imagen peliculas">
+          </div>
+            <h3>Peliculas</h3>
+          <!-- </div> -->
+        </div>
+
+        <!-- <div class="card"> -->
+          <div class="card-book">
+            <div>
+            <img src="./assets/image/books-2612702_1280.jpg" alt="imagen libros">
+          </div>
+            <h3>Libros</h3>
+          <!-- </div> -->
+        </div>
+
+        <div class="card-characters">
+          <div>
+          <img src="./assets/image/characters.jpg" alt="imagen libros">
+        </div>
+          <h3>Personajes</h3>
+        <!-- </div> -->
+      </div>
+
+
+      </div>
+    </section>
+<section class="films">
+  <table>
+    <thead>
+      <tr>
+        <th>PELÍCULA</th>
+        <th>ESTRENO</th>
+        <th>DIRECTOR</th>
+        <th>CURSO</th>
+        <th>CLASIFICACIÓN</th>
+        <th>DURACIÓN</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Harry Potter y la Piedra Filosofal</td>
+        <td>2001</td>
+        <td>Chris Columbus</td>
+        <td>Primer Año</td>
+        <td>PG</td>
+        <td>152 minutos</td>
+      </tr>
+      <!-- Puedes añadir más filas aquí -->
+    </tbody>
+  </table>
+
+</section>
+
+
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Proyecto Harry Potter. Todos los derechos reservados.</p>
+  </footer>
+  <!-- <script src="./app/fetch.js"></script> -->
+
+</body>
+
 </html>
