modify:films-dinamic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Inicio - Proyecto Harry Potter</title>
   <link rel="stylesheet" href="./css/style.css" />
+
 </head>
 
 <body>
@@ -69,116 +70,6 @@
       </div>
     </section>
     
-    <!-- <section id="films">
-      
-
-      <div class="title-films">
-        <h2>Peliculas</h2>
-      </div>
-      <div class="films">
-        <table>
-          <thead>
-            <tr>
-              <th>PELÍCULA</th>
-              <th>ESTRENO</th>
-              <th>DIRECTOR</th>
-              <th>CURSO</th>
-              <th>CLASIFICACIÓN</th>
-              <th>DURACIÓN</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <a href="https://www.espinof.com/cuatro/harry-potter-piedra-filosofal-estupenda-aventura-que-conserva-todo-su-magico-encanto-20-anos-despues-su-estreno"
-                  title="Harry Potter y la piedra filosofal" target="_blank">Harry Potter y la piedra filosofal</a>
-              </td>
-              <td>2001</td>
-              <td>Chris Columbus</td>
-              <td>Primer Año</td>
-              <td>PG</td>
-              <td>152 minutos</td>
-            </tr>
-            <tr>
-              <td>
-                <a href="https://es.wikipedia.org/wiki/Harry_Potter_y_la_c%C3%A1mara_secreta_(pel%C3%ADcula)"
-                  title="Harry Potter y la cámara secreta" target="_blank">Harry Potter y la cámara secreta</a>
-              </td>
-              <td>2002</td>
-              <td>Chris Columbus</td>
-              <td>2do Año</td>
-              <td>A partir de 7 años</td>
-              <td>2h 41</td>
-            </tr>
-            <tr>
-              <td><a
-                  href="https://www.espinof.com/criticas/harry-potter-y-el-prisionero-de-azkaban-fantasmagorica-belleza"
-                  title="Harry Potter y el prisionero de Azkaban" target="_blank">Harry Potter y el prisionero de
-                  Azkaban</a></td>
-              <td>2004</td>
-              <td>Alfonso Cuarón</td>
-              <td>3er Curso</td>
-              <td>A partir de 7 años</td>
-              <td>2h 22min</td>
-            </tr>
-            <tr>
-              <td><a href="https://www.espinof.com/estrenos/harry-potter-y-el-caliz-de-fuego-mas-de-lo-mismo"
-                  title="Harry Potter y el cáliz de fuego" target="_blank">Harry Potter y el cáliz de fuego</a></td>
-              <td>2005</td>
-              <td>Mike Newell</td>
-              <td>4to Curso</td>
-              <td>A partir de 10 años</td>
-              <td>2h 37min</td>
-            </tr>
-            <tr>
-              <td><a
-                  href="https://www.espinof.com/criticas/harry-potter-y-la-orden-del-fenix-estirando-un-chicle-muy-rentable"
-                  title="Harry Potter y la Orden del Fénix" target="_blank">Harry Potter y la Orden del Fénix</a></td>
-              <td>2007</td>
-              <td>David Yates</td>
-              <td>5to Curso</td>
-              <td>A partir de 10 años</td>
-              <td>2h 18min</td>
-            </tr>
-            <tr>
-              <td><a
-                  href="https://www.espinof.com/criticas/harry-potter-y-el-misterio-del-principe-desastrosa-sexta-parte-de-la-famosa-saga"
-                  title="Harry Potter y el misterio del príncipe" target="_blank">Harry Potter y el misterio del
-                  príncipe</a></td>
-              <td>2009</td>
-              <td>David Yates</td>
-              <td>6to Curso</td>
-              <td>A partir de 10 años</td>
-              <td>2h 33min</td>
-            </tr>
-            <tr>
-              <td><a
-                  href="https://www.espinof.com/criticas/harry-potter-y-las-reliquias-de-la-muerte-parte-1-la-mas-tensa-y-adulta-de-la-saga"
-                  title="" target="_blank">Harry Potter y las reliquias de la muerte - Parte 1</a></td>
-              <td>2010</td>
-              <td>David Yates</td>
-              <td>Último Curso</td>
-              <td>A partir de 10 años</td>
-              <td>2h 26min</td>
-            </tr>
-            <tr>
-              <td><a
-                  href="https://www.espinof.com/criticas/harry-potter-y-las-reliquias-de-la-muerte-parte-ii-epica-vibrantey-ligeramente-insatisfactoria"
-                  title="Harry Potter y las reliquias de la muerte - Parte 2">Harry Potter y las reliquias de la muerte
-                  - Parte 2</a></td>
-              <td>2010</td>
-              <td>David Yates</td>
-              <td>Último Curso</td>
-              <td>A partir de 13 años</td>
-              <td>2h 26min</td>
-            </tr>
-
-
-
-          </tbody>
-        </table>
-      </div>
-    </section> -->
     <section id="films">
       <div class="title-films">
         <h2>Películas</h2>
@@ -195,8 +86,9 @@
               <th>DURACIÓN</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody id="peli">
+            <tr></tr>
+            <!-- <tr>
               <td data-label="PELÍCULA"><a href="https://www.espinof.com/cuatro/harry-potter-piedra-filosofal-estupenda-aventura-que-conserva-todo-su-magico-encanto-20-anos-despues-su-estreno" title="Harry Potter y la piedra filosofal" target="_blank">Harry Potter y la piedra filosofal</a></td>
               <td data-label="ESTRENO">2001</td>
               <td data-label="DIRECTOR">Chris Columbus</td>
@@ -259,7 +151,7 @@
               <td data-label="CURSO">Último Curso</td>
               <td data-label="CLASIFICACIÓN">A partir de 13 años</td>
               <td data-label="DURACIÓN">2h 26min</td>
-            </tr>
+            </tr> -->
           </tbody>
         </table>
       </div>
@@ -432,7 +324,7 @@
     </section>
 
   </main>
-
+<script src="./app/app.js"></script>
   <footer>
     <p>&copy; 2024 Proyecto Harry Potter. Todos los derechos reservados.</p>
   </footer>
