--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -38,5 +38,8 @@
     </footer>
     <!-- <script src="../app/fetch.js"></script> -->
   <script src="../app/fetch.js"></script>
+
+</script>
+
 </body>
 </html>
