modify:correction-js-particles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <main >
     
     <section class="intro">
-      <div id="particles-js"></div>
+      <div id="particles-js" class="particles-main"></div>
       <h1>Bienvenidos al Mundo de Harry Potter</h1>
       <p>
         ¡Bienvenido a nuestra página dedicada al maravilloso mundo de Harry Potter! Aquí encontrarás descripciones
